--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </li>
             <li>
                 <u>Recently Read:</u>&nbsp;&nbsp;Each time you check a chapter of any book, the book is automatically
-                added to the &quot;Recently Read&quot; section. The max items the said section can hold is five; thus
+                added to the &quot;Recently Read&quot; section. The max items that the said section can hold is five; thus
                 any time you visit the page you can quickly see the last five (could be less) books you read in
                 chronological order
             </li>
