--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
                 any time you visit the page you can quickly see the last five (could be less) books you read in
                 chronological order
             </li>
+            <li>
+                <u>Filtering:</u>&nbsp;&nbsp;Oops😬 Looking for a book after adding a lot of books? Don't you worry, we've got your back!
+                Type the name of the particular book in the filter input field in the &quot;All Books&quot; section, then do your thing
+            </li>
         </ol>
 
         <p><em><b>PS:&nbsp;&nbsp;</b></em>If all the guidelines above went over your head, consider reading them again
